--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-navigation": "^3.10.1",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
